# tauri-plugin-webview-capture

./: .gitignore  Cargo.toml  LICENSE  README.ko.md  README.md  build.rs
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: analyze_frame_diffs.toml  analyze_regions.toml  record.toml  set_occlusion.toml  snapshot_region.toml
permissions/schemas/: schema.json
src/: commands.rs  error.rs  lib.rs  linux.rs  macos.rs  windows.rs
